# northlight-telemetry

./: .env.example  .gitignore  INSTRUCTIONS.md  NOTES.md  PRIVACY.md  README.md
agent/: Package.swift
agent/Scripts/: make-app-bundle.sh
agent/Sources/NorthLightAgent/: Batcher.swift  Pseudonym.swift  Telemetry.swift  main.swift
agent/Sources/NorthLightAgentCore/: InputActivityCounter.swift
agent/Tests/NorthLightAgentCoreChecks/: main.swift
backend/: pyproject.toml  requirements.txt  synthetic.py
backend/app/: aggregate.py  db.py  main.py  models.py
backend/migrations/: 0001_init.sql  0002_retention.sql  0003_ingest_batches.sql
backend/tests/: test_aggregate.py  test_api_contract.py
dashboard/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
dashboard/scripts/: a11y-smoke.mjs
dashboard/src/: App.tsx  api.ts  index.css
dashboard/tests/: accessibility.spec.ts
