[project]
name = "northlight-backend"
version = "0.1.0"
description = "NorthLight telemetry ingestion + dashboard API (MVP slice)"
requires-python = ">=3.11"
# Intentionally minimal (PRD §8): a web framework, an ASGI server, a Postgres
# driver, and Pydantic for request validation. No ORM (schema is real SQL
# migrations, PRD §7), no auth libs, no task queue -- none are needed for the
# two-endpoint slice.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",   # psycopg 3; parameterized SQL only (PRD §4 NFR)
    "pydantic>=2.7",
]

[tool.uv]
package = false
